--- a/client/package.json
+++ b/client/package.json
@@ -2,6 +2,7 @@
   "name": "nytscraper",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://localhost:3001",
   "dependencies": {
     "moment": "^2.19.1",
     "react": "^16.3.2",
